force-app/main/default/objects/Integracoes__c/Integracoes__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuração que possui todos os endereços para integração separado por ambiente</description>
    <label>Integrações</label>
</CustomObject>