force-app/main/default/objects/Integracoes__c/fields/Busca_CEP_desenvolvimento__c.field-meta.xml
<CustomField>
    <fullName>Busca_CEP_desenvolvimento__c</fullName>
    <description>Endereço do endpoint de desenvolvimento da busca de CEP</description>
    <inlineHelpText>Endereço do endpoint de desenvolvimento da busca de CEP</inlineHelpText>
    <label>Busca CEP desenvolvimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>