force-app/main/default/objects/Integracoes__c/fields/Oportunidade_CORP_GP_desenvolvimento__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_CORP_GP_desenvolvimento__c</fullName>
    <description>Endereço do endpoint de desenvolvimento do serviço &quot;GenerateProposal&quot; da Oportunidade CORP</description>
    <inlineHelpText>Endereço do endpoint de desenvolvimento do serviço &quot;GenerateProposal&quot; da Oportunidade CORP</inlineHelpText>
    <label>Oportunidade CORP GP desenvolvimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>