force-app/main/default/objects/Integracoes__c/fields/Oportunidade_CORP_GP_homologacao__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_CORP_GP_homologacao__c</fullName>
    <description>Endereço do endpoint de homologação do serviço &quot;GenerateProposal&quot; da Oportunidade CORP</description>
    <inlineHelpText>Endereço do endpoint de homologação do serviço &quot;GenerateProposal&quot; da Oportunidade CORP</inlineHelpText>
    <label>Oportunidade CORP GP homologação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>