force-app/main/default/objects/Integracoes__c/fields/Oportunidade_freteiro_GP_desenvolvimento__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_freteiro_GP_desenvolvimento__c</fullName>
    <description>Endereço do endpoint de desenvolvimento do serviço &quot;GenerateProposal&quot; da Oportunidade FRETEIRO</description>
    <inlineHelpText>Endereço do endpoint de desenvolvimento do serviço &quot;GenerateProposal&quot; da Oportunidade FRETEIRO</inlineHelpText>
    <label>Oportunidade FRETEIRO GP desenvolvimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>