force-app/main/default/objects/Integracoes__c/fields/Server_cargo_tracck_producao__c.field-meta.xml
<CustomField>
    <fullName>Server_cargo_tracck_producao__c</fullName>
    <description>Endereço do endpoint de produção da Cargo Tracck</description>
    <inlineHelpText>Endereço do endpoint de produção da Cargo Tracck</inlineHelpText>
    <label>Server Cargo Tracck produção</label>
    <length>255</length>
    <type>Text</type>
</CustomField>