force-app/main/default/objects/Integracoes__c/fields/Server_SIGGO_desenvolvimento__c.field-meta.xml
<CustomField>
    <fullName>Server_SIGGO_desenvolvimento__c</fullName>
    <description>Endereço do endpoint de desenvolvimento do Server SIGGO</description>
    <inlineHelpText>Endereço do endpoint de desenvolvimento do Server SIGGO</inlineHelpText>
    <label>Server SIGGO desenvolvimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>