force-app/main/default/objects/Integracoes__c/fields/Server_SIGGO_homologacao__c.field-meta.xml
<CustomField>
    <fullName>Server_SIGGO_homologacao__c</fullName>
    <description>Endereço do endpoint de homologação do Server SIGGO</description>
    <inlineHelpText>Endereço do endpoint de homologação do Server SIGGO</inlineHelpText>
    <label>Server SIGGO homologação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>